Fix path in image

--- a/Tutorials/Tutorial_9_Retail_Electricity_Prices/RPM.ipynb
+++ b/Tutorials/Tutorial_9_Retail_Electricity_Prices/RPM.ipynb
@@ -177,7 +177,7 @@
     "        <figcaption style=\"font-size: 0.9em; text-align: center; margin-bottom: 10px; margin-top: 15px\">\n",
     "          <span style=\"font-size: 1.2em; font-weight: bold; font-style: italic;\">Competitive Calculation</span> \n",
     "        </figcaption>\n",
-    "        <img src=\"Competitive-Retail-Image.png\" alt=\"Energy Cost Formula\" width=\"90%\">\n",
+    "        <img src=\"./files/Competitive-Retail-Image.png\" alt=\"Energy Cost Formula\" width=\"90%\">\n",
     "    </figure>\n",
     "</div>\n",
     "\n",
