fix output path

--- a/Tutorials/Tutorial_9_Retail_Electricity_Prices/RPM.ipynb
+++ b/Tutorials/Tutorial_9_Retail_Electricity_Prices/RPM.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,27 +134,27 @@
     "year = 2030\n",
     "\n",
     "# Manually change Input directory\n",
-    "datadir_input = f'./{year}/Inputs/' # GenX Input files\n",
-    "datadir_output = f'./{year}/Inputs/Results/' # GenX Output files\n",
-    "datadir_constants = f'./Constants/' # Constant Files\n",
-    "datadir_EIA861 = f'./EIA-861/' # EIA Form 861\n",
+    "datadir_input = f'./26-zone-couns-case/{year}_inputs/Inputs/' # GenX Input files\n",
+    "datadir_output = f'./26-zone-couns-case/{year}_inputs/Inputs/Results/' # GenX Output files\n",
+    "datadir_constants = f'./external_sources/' # Constant Files\n",
+    "datadir_EIA861 = f'./external_sources/EIA-861/' # EIA Form 861\n",
     "\n",
     "# Manually change Output directory\n",
     "    # COS IPM and State Results\n",
-    "folder_path_IPM_COS = f\"./Results/{year}/COS\" \n",
-    "folder_path_states_COS = f\"./Results/{year}/COS\"\n",
+    "folder_path_IPM_COS = f\"./26-zone-couns-case/{year}_results/COS\" \n",
+    "folder_path_states_COS = f\"./26-zone-couns-case/{year}_results/COS\"\n",
     "\n",
     "    # CR IPM and State Results\n",
-    "folder_path_IPM_CR = f\"./Results/{year}/CR\"\n",
-    "folder_path_states_CR = f\"./Results/{year}/CR\"\n",
+    "folder_path_IPM_CR = f\"./26-zone-couns-case/{year}_results/CR\"\n",
+    "folder_path_states_CR = f\"./26-zone-couns-case/{year}_results/CR\"\n",
     "\n",
     "    # Combined IPM and State Results\n",
-    "folder_path_IPM_COMBINED = f\"./Results/{year}/Combined\"\n",
-    "folder_path_STATES_COMBINED = f\"./Results/{year}/Combined\"\n",
+    "folder_path_IPM_COMBINED = f\"./26-zone-couns-case/{year}_results/Combined\"\n",
+    "folder_path_STATES_COMBINED = f\"./26-zone-couns-case/{year}_results/Combined\"\n",
     "\n",
     "    # Combined IPM and State Results Comparison with Benchmark Sources\n",
-    "folder_path_STATES_COMBINED_COMPARE = f\"./Results/{year}/Combined/\"\n",
-    "folder_path_IPM_COMBINED_COMPARE = f\"./Results/{year}/Combined/\""
+    "folder_path_STATES_COMBINED_COMPARE = f\"./26-zone-couns-case/{year}_results/Combined/\"\n",
+    "folder_path_IPM_COMBINED_COMPARE = f\"./26-zone-couns-case/{year}_results/Combined/\""
    ]
   },
   {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1810,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1831,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2214,16 +2214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9l/0ttvb7f127qgtw6nrswqz0r80000gn/T/ipykernel_73380/3250840967.py:24: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/9l/0ttvb7f127qgtw6nrswqz0r80000gn/T/ipykernel_26070/3250840967.py:24: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  utility_costs = pd.read_csv(os.path.join(datadir_constants, \"f1_income_2010.csv\"))\n",
-      "/var/folders/9l/0ttvb7f127qgtw6nrswqz0r80000gn/T/ipykernel_73380/3250840967.py:25: DtypeWarning: Columns (4,5) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/9l/0ttvb7f127qgtw6nrswqz0r80000gn/T/ipykernel_26070/3250840967.py:25: DtypeWarning: Columns (4,5) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  utility_sales = pd.read_csv(os.path.join(datadir_constants, \"f1_sales_2010.csv\"))\n"
      ]
     }
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2391,7 +2391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2470,11 +2470,7 @@
        "      <th>SRSE</th>\n",
        "      <th>ISNE</th>\n",
        "      <th>NYCW</th>\n",
-       "      <th>NYUP</th>\n",
-       "      <th>MISC</th>\n",
-       "      <th>MISE</th>\n",
-       "      <th>MISS</th>\n",
-       "      <th>MISW</th>\n",
+       "      <th>...</th>\n",
        "      <th>PJMC</th>\n",
        "      <th>PJMW</th>\n",
        "      <th>SPPC</th>\n",
@@ -2500,11 +2496,7 @@
        "      <td>659.129153</td>\n",
        "      <td>121.571192</td>\n",
        "      <td>654.528545</td>\n",
-       "      <td>-1228.763173</td>\n",
-       "      <td>216.556053</td>\n",
-       "      <td>27.815822</td>\n",
-       "      <td>-518.048242</td>\n",
-       "      <td>302.642623</td>\n",
+       "      <td>...</td>\n",
        "      <td>-191.418223</td>\n",
        "      <td>-659.150035</td>\n",
        "      <td>165.274718</td>\n",
@@ -2518,23 +2510,23 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       BASN       CANO        CASO       NWPP        RMRG        SRSG  \\\n",
        "0 -4.628118  66.236789  486.164147  52.820033 -374.036901  161.749601   \n",
        "\n",
-       "      FRCC        SRSE        ISNE        NYCW         NYUP        MISC  \\\n",
-       "0  34.7823  659.129153  121.571192  654.528545 -1228.763173  216.556053   \n",
+       "      FRCC        SRSE        ISNE        NYCW  ...        PJMC        PJMW  \\\n",
+       "0  34.7823  659.129153  121.571192  654.528545  ... -191.418223 -659.150035   \n",
        "\n",
-       "        MISE        MISS        MISW        PJMC        PJMW        SPPC  \\\n",
-       "0  27.815822 -518.048242  302.642623 -191.418223 -659.150035  165.274718   \n",
+       "         SPPC        SPPN        SPPS       SRCE        PJME        PJMD  \\\n",
+       "0  165.274718 -196.011273 -702.563512  258.07685 -241.654416  772.907868   \n",
        "\n",
-       "         SPPN        SPPS       SRCE        PJME        PJMD        SRCA  \\\n",
-       "0 -196.011273 -702.563512  258.07685 -241.654416  772.907868  208.410675   \n",
+       "         SRCA        TRE  \n",
+       "0  208.410675 -72.392477  \n",
        "\n",
-       "         TRE  \n",
-       "0 -72.392477  "
+       "[1 rows x 25 columns]"
       ]
      },
      "metadata": {},
@@ -2594,7 +2586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2726,7 +2718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2761,7 +2753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2790,7 +2782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2828,7 +2820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2897,7 +2889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2909,7 +2901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2930,7 +2922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2952,19 +2944,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9l/0ttvb7f127qgtw6nrswqz0r80000gn/T/ipykernel_73380/2460517293.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/9l/0ttvb7f127qgtw6nrswqz0r80000gn/T/ipykernel_26070/2460517293.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df.rename(columns={'Region': 'IPM_Region'}, inplace=True)\n",
-      "/var/folders/9l/0ttvb7f127qgtw6nrswqz0r80000gn/T/ipykernel_73380/2460517293.py:7: SettingWithCopyWarning: \n",
+      "/var/folders/9l/0ttvb7f127qgtw6nrswqz0r80000gn/T/ipykernel_26070/2460517293.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -2993,7 +2985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3010,7 +3002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3141,7 +3133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3160,7 +3152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3272,7 +3264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3289,19 +3281,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9l/0ttvb7f127qgtw6nrswqz0r80000gn/T/ipykernel_73380/4227323722.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/9l/0ttvb7f127qgtw6nrswqz0r80000gn/T/ipykernel_26070/4227323722.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df.rename(columns={'Region': 'IPM_Region'}, inplace=True)\n",
-      "/var/folders/9l/0ttvb7f127qgtw6nrswqz0r80000gn/T/ipykernel_73380/4227323722.py:7: SettingWithCopyWarning: \n",
+      "/var/folders/9l/0ttvb7f127qgtw6nrswqz0r80000gn/T/ipykernel_26070/4227323722.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -3330,7 +3322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3459,7 +3451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3578,7 +3570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3699,7 +3691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3798,7 +3790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3897,7 +3889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4055,7 +4047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -4166,7 +4158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4191,7 +4183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -4436,7 +4428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -4548,7 +4540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -4795,7 +4787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -5670,7 +5662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5691,7 +5683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -6076,7 +6068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -6327,7 +6319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -6480,7 +6472,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "jupyterlab_env",
    "language": "python",
    "name": "python3"
   },
