add RPM comparison

--- a/Tutorials/Tutorial_9_Retail_Electricity_Prices/RPM.ipynb
+++ b/Tutorials/Tutorial_9_Retail_Electricity_Prices/RPM.ipynb
@@ -25,7 +25,7 @@
     "    - *[State Results](#States-Final-Calculation---Combined)*\n",
     "- [Appendix](#Appendix)\n",
     "    - *[Combined Price Benchmark Comparisons](#Benchmark-Comparison---Combined)*\n",
-    "    - *[IPM Model Comparison](#IPM-Model-Comparison)*"
+    "    - *[EPA RPM Model Comparison](#EPA-Model-Comparison)*"
    ]
   },
   {
@@ -6474,7 +6474,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### IPM Model Comparison"
+    "### EPA Model Comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: center;\">\n",
+    "    <figure>\n",
+    "        <figcaption style=\"font-size: 0.9em; text-align: center; margin-bottom: 10px; margin-top: 15px\">\n",
+    "          <span style=\"font-size: 1.2em; font-weight: bold; font-style: italic;\">EPA RPM Cost of Service Calculation</span> \n",
+    "        </figcaption>\n",
+    "        <img src=\"./files/RPM_COS.png\" alt=\"Energy Cost Formula\" width=\"60%\">\n",
+    "    </figure>\n",
+    "</div>\n",
+    "\n",
+    "<figure>\n",
+    "  <figcaption style=\"font-size: 0.9em; text-align: center; margin-bottom: 10px; margin-top: 15px\">\n",
+    "    <span style=\"font-size: 1.2em; font-weight: bold; font-style: italic;\">Summary of Differences Between EPA RPM and This Model - Cost of Service</span> \n",
+    "  </figcaption>\n",
+    "  <div style=\"display: flex; justify-content: center;\">\n",
+    "  <table style=\"width: 75%; border: 0.1px solid #ddd; border-collapse: collapse; margin-top: 0px; font-size: 13px;\">\n",
+    "    <thead style=\"color: black;\">\n",
+    "      <tr>\n",
+    "        <th style=\"padding: 8px; text-align: left;\">Cost Component</th>\n",
+    "        <th style=\"padding: 8px; text-align: left;\">Description</th>\n",
+    "      </tr>\n",
+    "    </thead>\n",
+    "    <tbody>\n",
+    "      <tr style=\"background-color: white;\">\n",
+    "        <td style=\"padding: 8px; font-weight: bold; background-color: white;\">Final NUG Cost</td>\n",
+    "        <td style=\"padding: 8px;\">Included within GenX Outputs.</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td style=\"padding: 8px; font-weight: bold; background-color: white;\">Avg Generation Cost</td>\n",
+    "        <td style=\"padding: 8px;\">Network expansion is included.</td>\n",
+    "      </tr>\n",
+    "    </tbody>\n",
+    "  </table>\n",
+    "</figure>\n",
+    "\n",
+    "<div style=\"margin-top: 15px;\">\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <figure>\n",
+    "        <figcaption style=\"font-size: 0.9em; text-align: center; margin-bottom: 10px; margin-top: 15px\">\n",
+    "          <span style=\"font-size: 1.2em; font-weight: bold; font-style: italic;\">EPA RPM Competitive Calculation</span> \n",
+    "        </figcaption>\n",
+    "        <img src=\"./files/RPM_CR.png\" alt=\"Energy Cost Formula\" width=\"60%\">\n",
+    "    </figure>\n",
+    "</div>\n",
+    "\n",
+    "<figure>\n",
+    "  <figcaption style=\"font-size: 0.9em; text-align: center; margin-bottom: 10px; margin-top: 15px\">\n",
+    "    <span style=\"font-size: 1.2em; font-weight: bold; font-style: italic;\">Summary of Differences Between EPA RPM and This Model - Competitive</span> \n",
+    "  </figcaption>\n",
+    "  <div style=\"display: flex; justify-content: center;\">\n",
+    "  <table style=\"width: 75%; border: 0.1px solid #ddd; border-collapse: collapse; margin-top: 0px; font-size: 13px;\">\n",
+    "    <thead style=\"color: black;\">\n",
+    "      <tr>\n",
+    "        <th style=\"padding: 8px; text-align: left;\">Cost Component</th>\n",
+    "        <th style=\"padding: 8px; text-align: left;\">Description</th>\n",
+    "      </tr>\n",
+    "    </thead>\n",
+    "    <tbody>\n",
+    "      <tr style=\"background-color: #f9f9f9;\">\n",
+    "        <td style=\"padding: 8px; font-weight: bold; background-color: white;\">Capacity price</td>\n",
+    "        <td style=\"padding: 8px;\">Calculated with an alternative method using Reserve Margin Revenues.</td>\n",
+    "      </tr>\n",
+    "    </tbody>\n",
+    "  </table>\n",
+    "</figure>"
    ]
   }
  ],
