--- a/Tutorials/Tutorial_9_Retail_Electricity_Prices/RPM.ipynb
+++ b/Tutorials/Tutorial_9_Retail_Electricity_Prices/RPM.ipynb
@@ -39,9 +39,9 @@
     "*[Back to Table of Contents](#Table-of-Contents)*\n",
     "\n",
     "<figure>\n",
-    "  <figcaption style=\"font-size: 0.9em; text-align: center; margin-bottom: 5px;\">\n",
+    "  <figcaption style=\"font-size: 0.9em; display: block; text-align: center; margin-bottom: 5px;\">\n",
     "    <span style=\"font-size: 1.2em; font-weight: bold; font-style: italic;\">Input Files</span> \n",
-    "  </figcaption>\n",
+    "</figcaption>\n",
     "  <div style=\"display: flex; justify-content: center;\">\n",
     "  <table style=\"width: 75%; border: 0.1px solid #ddd; border-collapse: collapse; margin-top: 0px; font-size: 13px\">\n",
     "    <thead style=\"color: black; background-color: #f2f2f2;\">\n",
@@ -200,64 +200,64 @@
     "    </thead>\n",
     "    <tbody>\n",
     "      <tr style=\"background-color: #f9f9f9;\">\n",
-    "        <td style=\"padding: 8px; font-weight: bold; background-color: #ffe3e3;\">Marginal Energy Cost</td>\n",
+    "        <td style=\"padding: 8px; font-weight: bold; background-color: #ffe3e3; word-wrap: break-word;\">Marginal Energy Cost</td>\n",
     "        <td style=\"padding: 8px;\">Average annual marginal electricity price per NEMS region.</td>\n",
     "        <td style=\"padding: 8px; word-break: break-word;\">prices.csv</td>\n",
     "        <td style=\"padding: 8px;\">GenX Output</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td style=\"padding: 8px; font-weight: bold; background-color: #ffe6d1;\">Distribution Loss Factor</td>\n",
+    "        <td style=\"padding: 8px; font-weight: bold; background-color: #ffe6d1; word-wrap: break-word;\">Distribution Loss Factor</td>\n",
     "        <td style=\"padding: 8px;\">Loss factor calculated as (1 - (total electricity sales / net energy for load)) per NEMS region.</td>\n",
     "        <td style=\"padding: 8px; word-break: break-word;\">Dist_Loss_Factor.csv</td>\n",
     "        <td style=\"padding: 8px;\"><a href=https://www.eia.gov/outlooks/aeo/tables_ref.php/>EIA AEO 2023 Reference Case</a></td>\n",
     "      </tr>\n",
     "      <!-- Reliability Cost with two subcells -->\n",
     "      <tr style=\"background-color: #f9f9f9;\">\n",
-    "        <td style=\"padding: 8px; font-weight: bold; background-color: #ffe6d1;\" rowspan=\"2\">Reliability Cost</td>\n",
+    "        <td style=\"padding: 8px; font-weight: bold; background-color: #ffe6d1; word-wrap: break-word;\" rowspan=\"2\">Reliability Cost</td>\n",
     "        <td style=\"padding: 8px;\" rowspan=\"2\">Cost of maintaining adequate capacity. Reserve margin payments represent the cost of maintaining reliability which is distributed over total sales per NEMS region.</td>\n",
     "        <td style=\"padding: 8px; word-break: break-word;\">ReserveMarginRevenue.csv</td>\n",
     "        <td style=\"padding: 8px;\">GenX Output</td>\n",
     "      </tr>\n",
-    "      <tr style=\"background-color: #f9f9f9;\">\n",
+    "      <tr style=\"background-color: #ffffff;\">\n",
     "        <td style=\"padding: 8px; word-break: break-word;\">capacity_factor.csv</td>\n",
     "        <td style=\"padding: 8px;\">GenX Output</td>\n",
     "      </tr>\n",
     "      <!-- REC Cost with multiple rows -->\n",
-    "      <tr>\n",
+    "      <tr style= \"background-color: #f9f9f9;\">\n",
     "        <td style=\"padding: 8px; font-weight: bold; background-color: #fff7d5;\" rowspan=\"2\">Renewable Energy Certificate (REC) Cost</td>\n",
-    "        <td style=\"padding: 8px;\" rowspan=\"2\">Cost premium of RPS-qualifying generation. Renewable/clean credit revenue earned by each generator is distributed over total sales per NEMS region.</td>\n",
+    "        <td style=\"padding: 8px; word-wrap: break-word;\" rowspan=\"2\">Cost premium of RPS-qualifying generation. Renewable/clean credit revenue earned by each generator is distributed over total sales per NEMS region.</td>\n",
     "        <td style=\"padding: 8px; word-break: break-word;\">ESR_Revenue.csv</td>\n",
     "        <td style=\"padding: 8px;\">GenX Output</td>\n",
     "      </tr>\n",
-    "      <tr>\n",
+    "      <tr style=\"background-color: #ffffff;\">\n",
     "        <td style=\"padding: 8px; word-break: break-word;\">capacity_factor.csv</td>\n",
     "        <td style=\"padding: 8px;\">GenX Output</td>\n",
     "      </tr>\n",
     "      <!-- Tax Rate Row -->\n",
     "      <tr style=\"background-color: #f9f9f9;\">\n",
     "        <td style=\"padding: 8px; font-weight: bold; background-color: #e6ffe6;\">Tax Rate</td>\n",
-    "        <td style=\"padding: 8px;\">State sales tax that is extrapolated to IPM regions via a weighted average with the proportion of each state in a given IPM region. Electricity tax rules vary by state but sales tax is assumed to estimate both state and local level electricity taxes based on electricity bill benchmarks.</td>\n",
+    "        <td style=\"padding: 8px; word-wrap: break-word;\">State sales tax that is extrapolated to IPM regions via a weighted average with the proportion of each state in a given IPM region. Electricity tax rules vary by state but sales tax is assumed to estimate both state and local level electricity taxes based on electricity bill benchmarks.</td>\n",
     "        <td style=\"padding: 8px; word-break: break-word;\">State_Sales_Tax.csv</td>\n",
     "        <td style=\"padding: 8px;\"><a href=https://taxfoundation.org/data/all/state/2024-sales-taxes/>Tax Foundation 2024</a></td>\n",
     "      </tr>\n",
     "      <!-- Transmission Cost with multiple rows -->\n",
-    "      <tr>\n",
-    "        <td style=\"padding: 8px; font-weight: bold; background-color: #dbe6ff;\" rowspan=\"3\">Transmission Cost</td>\n",
-    "        <td style=\"padding: 8px;\" rowspan=\"3\">Costs to build, operate, and maintain existing transmission network scaled proportionately to network expansion per NEMS region.</td>\n",
+    "      <tr style=\"background-color: #ffffff;\">\n",
+    "        <td style=\"padding: 8px; font-weight: bold; background-color: #dbe6ff; word-wrap: break-word;\" rowspan=\"3\">Transmission Cost</td>\n",
+    "        <td style=\"padding: 8px; word-wrap: break-word;\" rowspan=\"3\">Costs to build, operate, and maintain existing transmission network scaled proportionately to network expansion per NEMS region.</td>\n",
     "        <td style=\"padding: 8px; word-break: break-word;\">Transmission.csv</td>\n",
     "        <td style=\"padding: 8px;\"><a href=https://www.eia.gov/outlooks/aeo/tables_ref.php/>EIA AEO 2023 Reference Case</td>\n",
     "      </tr>\n",
-    "      <tr>\n",
+    "      <tr style=\"background-color: #ffffff;\">\n",
     "        <td style=\"padding: 8px; word-break: break-word;\">Network.csv</td>\n",
     "        <td style=\"padding: 8px;\">GenX Input</td>\n",
     "      </tr>\n",
-    "      <tr>\n",
+    "      <tr style=\"background-color: #ffffff;\">\n",
     "        <td style=\"padding: 8px; word-break: break-word;\">network_expansion.csv</td>\n",
     "        <td style=\"padding: 8px;\">GenX Output</td>\n",
     "      </tr>\n",
     "      <tr style=\"background-color: #f9f9f9;\">\n",
-    "        <td style=\"padding: 8px; font-weight: bold; background-color: #fcefff;\">Distribution Cost</td>\n",
-    "        <td style=\"padding: 8px;\">Costs to build, operate, and maintain existing distribution network per NEMS region.</td>\n",
+    "        <td style=\"padding: 8px; font-weight: bold; background-color: #fcefff; word-wrap: break-word;\">Distribution Cost</td>\n",
+    "        <td style=\"padding: 8px; word-wrap: break-word;\">Costs to build, operate, and maintain existing distribution network per NEMS region.</td>\n",
     "        <td style=\"padding: 8px; word-break: break-word;\">Distribution.csv</td>\n",
     "        <td style=\"padding: 8px;\">GenX Output</td>\n",
     "      </tr>\n",
