--- a/Tutorials/Tutorial_9_Retail_Electricity_Prices/RPM.ipynb
+++ b/Tutorials/Tutorial_9_Retail_Electricity_Prices/RPM.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "<figure>\n",
     "  <figcaption style=\"font-size: 0.9em; display: block; text-align: center; margin-bottom: 5px;\">\n",
-    "    <span style=\"font-size: 1.2em; font-weight: bold; font-style: italic;\">Input Files</span> \n",
+    "    <span style=\"font-size: 1.2em; font-weight: bold; font-style: italic; text-align: center;\">Input Files</span> \n",
     "</figcaption>\n",
     "  <div style=\"display: flex; justify-content: center;\">\n",
     "  <table style=\"width: 75%; border: 0.1px solid #ddd; border-collapse: collapse; margin-top: 0px; font-size: 13px\">\n",
@@ -181,6 +181,8 @@
     "        <img src=\"./files/Competitive-Retail-Image.png\" alt=\"Energy Cost Formula\" width=\"90%\">\n",
     "    </figure>\n",
     "</div>\n",
+    "\n",
+    "<div style=\"height: 20px;\"></div>\n",
     "\n",
     "<figure>\n",
     "  <figcaption style=\"font-size: 0.9em; text-align: center; margin-bottom: 10px; margin-top: 15px\">\n",
@@ -2143,11 +2145,11 @@
     "    </tr>\n",
     "    <tr>\n",
     "      <td style=\"padding: 8px; word-break: break-word;\">f1_sales_2010.csv</td>\n",
-    "      <td style=\"padding: 8px;\"><a href=https://catalyst.coop/pudl//>Catalyst Cooperative</a></td>\n",
+    "      <td style=\"padding: 8px;\"><a href=https://www.ferc.gov/general-information-0/electric-industry-forms/form-1-electric-utility-annual-report//>FERC Form 1 (2010-22)</a></td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td style=\"padding: 8px; word-break: break-word;\">f1_income_2010.csv</td>\n",
-    "      <td style=\"padding: 8px;\"><a href=https://catalyst.coop/pudl//>Catalyst Cooperative</a></td>\n",
+    "      <td style=\"padding: 8px;\"><a href=https://www.ferc.gov/general-information-0/electric-industry-forms/form-1-electric-utility-annual-report//>FERC Form 1 (2010-22)</a></td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <td style=\"padding: 8px; word-break: break-word;\">Sales_{year}.csv</td>\n",
