--- a/Tutorials/Tutorial_9_Retail_Electricity_Prices/RPM.ipynb
+++ b/Tutorials/Tutorial_9_Retail_Electricity_Prices/RPM.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "<figure>\n",
     "  <figcaption style=\"font-size: 0.9em; display: block; text-align: center; margin-bottom: 5px;\">\n",
-    "    <span style=\"font-size: 1.2em; font-weight: bold; font-style: italic; text-align: center;\">Input Files</span> \n",
+    "    <p style=\"font-size: 1.2em; font-weight: bold; font-style: italic; align: center;\">Input Files</p> \n",
     "</figcaption>\n",
     "  <div style=\"display: flex; justify-content: center;\">\n",
     "  <table style=\"width: 75%; border: 0.1px solid #ddd; border-collapse: collapse; margin-top: 0px; font-size: 13px\">\n",
